Additions and Modifications

--- a/BurgerWebsite/styleBurgerBuilder.css
+++ b/BurgerWebsite/styleBurgerBuilder.css
@@ -6,6 +6,9 @@
     font-family: Ananda;
     src: url(Ananda_Personal_Use.ttf);
 }
+.hidden{
+  display: none;
+}
 body {
     margin: 0;
     background-color: #FFF9F5;
@@ -162,11 +165,11 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px; /* Ajoute un espacement entre les lignes */
+    margin-bottom: 10px;
 }
 button {
     flex: 1;
-    height: 70px; /* Ajustez la hauteur des boutons selon vos besoins */
+    height: 70px; 
     width: 200px;
     box-sizing: border-box;
     font-size: 15px;
@@ -178,7 +181,8 @@ button {
 .CheeseButton,
 .LettuceButton,
 .CucumberButton,
-.TopingsButton,
+.ToppingsButton,
+.PepperoniButton,
 .TomatoButton,
 .OnionButton{
     height: 35px;
@@ -195,7 +199,8 @@ button {
 .CheeseButton:hover,
 .LettuceButton:hover,
 .CucumberButton:hover,
-.TopingsButton:hover,
+.ToppingsButton:hover,
+.PepperoniButton:hover,
 .TomatoButton:hover,
 .OnionButton:hover {
     cursor: pointer;
@@ -207,7 +212,8 @@ button {
  .subCheeseButton,
  .subLettuceButton,
  .subCucumberButton,
- .subTopingsButton,
+ .subToppingsButton,
+ .subPepperoniButton,
  .subTomatoButton,
  .subOnionButton{
     margin-left:7px;
@@ -227,16 +233,18 @@ button {
 .CheeseButton:hover,
 .LettuceButton:hover,
 .CucumberButton:hover,
-.TopingsButton:hover,
+.ToppingsButton:hover,
 .TomatoButton:hover,
+.PepperoniButton:hover,
 .OnionButton:hover,
 .subBottomBunButton:hover,
 .subPattyButton:hover,
 .subCheeseButton:hover,
 .subLettuceButton:hover,
 .subCucumberButton:hover,
-.subTopingsButton:hover,
+.subToppingsButton:hover,
 .subTomatoButton:hover,
+.subPepperoniButton:hover,
 .subOnionButton:hover {
     cursor: pointer;
     color: #ffffff;
@@ -1729,4 +1737,3 @@ button {
     overflow: hidden;
     top: -220px;
   }
-
