--- a/BurgerWebsite/CSS_files/style3.css
+++ b/BurgerWebsite/CSS_files/style3.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Outfit;
-    src: url(imagesAndFonts/Outfit-VariableFont_wght.ttf);
+    src: url(imagesAndFonts\Outfit-VariableFont_wght.ttf);
 }
 @font-face {
     font-family: Ananda;
