--- a/BurgerWebsite/CSS_files/styleBurgerBuilder.css
+++ b/BurgerWebsite/CSS_files/styleBurgerBuilder.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: Outfit;
-    src: url(imagesAndFonts\Outfit-VariableFont_wght.ttf);
+    src: url(imagesAndFonts/Outfit-VariableFont_wght.ttf);
 }
 @font-face {
     font-family: Ananda;
-    src: url(imagesAndFonts\Ananda_Personal_Use.ttf);
+    src: url(imagesAndFonts/Ananda_Personal_Use.ttf);
 }
 .hidden{
   display: none;
@@ -222,17 +222,19 @@ li {
     flex-wrap: wrap;
 }
 .container2 {
+    position: absolute;
+    top:15%;
+    left:47%;
     height: 550px;
     width: 550px;
-    padding: 20px;
-    font-family:Outfit;
-    text-align: center ;
-    font-size: 20px;
-    font-weight: bolder;
     background-color: #ffcdb0;
-    margin-top:40px;
-    margin-right: 120px;
     border-radius: 50% ;
+}
+
+.burger{
+  position:absolute;
+  top:37%;
+  left:6.5%;
 }
 
 form {
@@ -367,12 +369,6 @@ button {
     background-color: #FFA775;
     color: white;
 }
-
-.burger{
-    position:absolute;
-    left:50%;
-    top:47%;
-  }
 
 
   .OvalPlate1{
